BETA 0.7.4.1 - Fixed instability on mobile devices. The update list no longer redraws the page width.

--- a/styles/app.css
+++ b/styles/app.css
@@ -717,26 +717,10 @@ sub {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
-  50% {
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
 }
 
 @keyframes textAnimation {
   0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  50% {
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
-  }
-  100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
