--- a/styles/components/_last-updates.scss
+++ b/styles/components/_last-updates.scss
@@ -70,12 +70,4 @@
     0% {
         transform: translateX(0);
     }
-
-    50% {
-        transform: translateX(100%);
-    }
-
-    100% {
-        transform: translateX(0);
-    }
 }
